final project base files / chamber  contrast fix

--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -47,7 +47,7 @@ a {
 .card, .hero, .weather, .events, .forecast{
     border: 2px solid var(--primary-color);
     border-radius: .5rem;
-    background-color: rgba(250, 250, 250, .2);
+    background-color: rgba(30, 30, 30, 1);
     padding: .5rem;
     gap: .5rem;
 }
